# tlpi

./: main.c  makefile  tlpi_hdr.h
chap29/thread_create/: makefile  thread_create  thread_create.c
chap3/: get_libc_version.c  get_libc_version.h  main  main.c  makefile
chap3/get_libc_version/: main.c  makefile
chap3/test_tlpi/: main.c  makefile
chap30/pthread_dynamic_mutex/: main.c  makefile  thread_dynamic_mutex
chap30/pthread_static_mutex/: main.c  makefile  thread_static_mutex
chap30/pthread_wait_condition_var/: main.c  makefile  pthread_wait_condition_var  pthread_wait_condition_var.c
chap31/pthread_once/: CMakeLists.txt  main.c
chap31/thread_specific_data/: main.c
chap32/thread_cancellation/: main.c
chap33/test/: main.c
chap4/copy/: copy.c  copy.h  makefile
chap41/shared/: libmyMath.so.1  libmyMath.so.1.0  libmyMath.so.1.2  libmyMath.so.2  libmyMath.so.2.0  main  main.cpp  makefile  myMath.h  sub.cpp  sum.cpp
chap41/static/: build.sh  main  makefile  myMath.h
chap58/: stream_client.c  stream_server  stream_server.c  stream_socket.h
chap58/datagram/: datagram_client  datagram_client.c  datagram_server  datagram_server.c  datagram_socket.h  makefile
chap58/stream/: makefile  stream_client  stream_client.c  stream_server.c  stream_socket.h
examples/Shape/: Circle.h  Rectangle.h  Shape.h  Square.h  main  main.cpp  makefile
examples/SingletonPattern/: Singleton.h  main  main.cpp  makefile
examples/Stack/: List.h  Stack.h  main  main.cpp  makefile
lib/: ename.c.inc  error_functions.c  error_functions.h  get_num.c  get_num.h  makefile
(+2 files in other folders)
